# Riven_compiler

./: CMakeLists.txt  Makefile  README.md  package.sh
examples/: hello.rv  oop.rv
include/: lexer.h  riven.h  riven_runtime.h  token.h
src/: ast.c  codegen.c  environment.c  lexer.c  lexer.cpp  main.c  main.cpp  parser.c  runtime.c  token.cpp
system/: core.rvh
tests/: CMakeLists.txt  test_lexer.cpp
